  * SECURITY UPDATE: arbitrary code execution via directory traversal
    (LP: #881548)
    - UpdateManager/Core/DistUpgradeFetcherCore.py: verify signature before
      unpacking the tarball.
    - CVE-2011-3152
  * SECURITY UPDATE: information leak via insecure temp file (LP: #881541)
    - DistUpgrade/DistUpgradeViewKDE.py: use mkstemp instead of mktemp.
    - CVE-2011-3154

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Nov 2011 13:30:36 +0100

update-manager (1:0.154.3) precise; urgency=low

  [ Alexey Feldgendler ]
  * lp:~feldgendler/update-manager/574436:
    Introduced the [ThirdPartyMirrors] configuration section for the
    distribution upgrader. All keys in it must have distinct names, but
    only values matter. Each value is a third-party source URI. Such
    whitelisted sources don't get disabled on upgrade; however, if they
    use "from" release name, it's replaced with the "to" release name.
    (LP: #574436)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 21 Nov 2011 15:36:02 +0100

update-manager (1:0.154.2) precise; urgency=low

  * UpdateManager/backend/InstallBackendSynaptic.py
    - fix crash when using synaptic (LP: #878719)
  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:
    - before doing the upgrade test if all systemdirs are actually 
      writable, thanks to Brian Murray (LP: #889921)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 17 Nov 2011 10:15:29 +0100

update-manager (1:0.154.1) precise; urgency=low

  [ Robert Roth ]
  *  Change up-to-date text to up to date (LP: #864336)
  
  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeController.py:
    - add precise as a LTS release
  * AutoUpgradeTester/profile/*/DistUpgrade.cfg:
    - updated to test oneiric->precise and lucid->precise
  * AutoUpgradeTester/UpgradeTestBackendQemu.py:
    - add support for different architectures
  * AutoUpgradeTester/profile/server-amd64/DistUpgrade.cfg:
    - add amd64 server upgrade test profile