@@ -21,6 +21,11 @@ update-manager (1:0.154.4) UNRELEASED; urgency=low
   * SECURITY UPDATE: information leak via insecure temp file (LP: #881541)
     - DistUpgrade/DistUpgradeViewKDE.py: use mkstemp instead of mktemp.
     - CVE-2011-3154
+  
+  [ Michael Vogt ]
+  * UpdateManager/UpdateManager.py:
+    - ensure that the origin headers state of "select all/dselect all"
+      is consistent
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Nov 2011 13:30:36 +0100
 
